# roscon2024_control_workshop

./: README.md  docker-compose.yml  roscon2024_control_workshop.repos
docker/: Dockerfile  docker-compose.yml
tiago_robot/: README.md
tiago_robot/tiago_bringup/: CMakeLists.txt  package.xml
tiago_robot/tiago_bringup/config/: tiago_soften_values.yaml
tiago_robot/tiago_bringup/config/joy_teleop/: joy_teleop_no-arm.yaml  joy_teleop_pal-hey5_schunk-ft.yaml
tiago_robot/tiago_bringup/config/motions/: tiago_motions.yaml.em  tiago_motions_no-arm_no-end-effector_no-ft-sensor.yaml  tiago_motions_right-arm_custom_no-ft-sensor.yaml  tiago_motions_right-arm_pal-gripper_schunk-ft.yaml  (+3 more)
tiago_robot/tiago_bringup/launch/: joystick_teleop.launch.py  tiago_bringup.launch.py  tiago_play_motion2.launch.py  twist_mux.launch.py
tiago_robot/tiago_bringup/scripts/: end_effector_camera.sh  regen_em_file.py
tiago_robot/tiago_controller_configuration/: package.xml
tiago_robot/tiago_controller_configuration/config/: arm_controller.yaml  current_limit_controllers.yaml  gravity_compensation_controller.yaml  joint_state_broadcaster.yaml  mobile_base_controller.yaml  mobile_base_controller_multipliers.yaml  pids.yaml
tiago_robot/tiago_controller_configuration/launch/: arm_controller.launch.py  default_controllers.launch.py  gravity_compensation_controller.launch.py  head_controller.launch.py  joint_state_broadcaster.launch.py  mobile_base_controller.launch.py  pal-gripper_controller.launch.py  pal-hey5_controller.launch.py  torso_controller.launch.py
tiago_robot/tiago_description/: package.xml
tiago_robot/tiago_description/gazebo/: gazebo.urdf.xacro
tiago_robot/tiago_description/launch/: robot_state_publisher.launch.py  show.launch.py
tiago_robot/tiago_description/robots/: tiago.urdf.xacro  tiago_base_unrolled.urdf  tiago_full_unrolled.urdf
tiago_robot/tiago_description/ros2_control/: ros2_control.urdf.xacro
tiago_robot/tiago_description/test/: test_description.launch.py
tiago_robot/tiago_description/tiago_description/: tiago_launch_utils.py
tiago_robot/tiago_description/urdf/: materials.urdf.xacro
workshop_bringup/: CMakeLists.txt  package.xml
workshop_bringup/config/: async_controllers.yaml  chaining_controllers.yaml  chaining_controllers_generic.yaml  chaining_controllers_tiago1.yaml  controllers.yaml  fallback_controllers.yaml  tiago_full_unrolled.urdf
workshop_bringup/launch/: task3_async.launch.xml  tiago_chaining.launch.xml  tiago_fallback.launch.xml  tiago_fallback.xml.launch
workshop_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml  workshop_controllers.xml
workshop_controllers/include/workshop_controllers/: chained_filter.hpp  faulty_jtc.hpp  sleepy_controller.hpp
workshop_controllers/src/: chained_filter.cpp  chained_filter.yaml  chained_filter2.cpp  chained_filter_done.cpp  faulty_jtc.cpp  sleepy_controller.cpp  sleepy_controller.yaml
(+31 files in other folders)
